--- a/04_SelectSegment.ipynb
+++ b/04_SelectSegment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "f2f54fc2",
    "metadata": {},
    "outputs": [],
@@ -10,16 +10,94 @@
     "import os\n",
     "import geopandas as gpd\n",
     "import pandas as pd \n",
+    "import logging\n",
     "from pathlib import Path\n",
     "from shapely.geometry import Point, LineString\n",
     "from shapely import wkt # for WKT 轉幾何物件\n",
     "from TDXdataframe import read_businfo_xml\n",
-    "from basicprocess import create_folder, findfiles, read_combined_dataframe, updatelog_format, transfer_log_to_dataframe"
+    "from basicprocess import create_folder, findfiles, read_combined_dataframe, get_df_log, outputlog"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eac6713e",
+   "metadata": {},
+   "source": [
+    "# 函數庫"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a75f461",
+   "metadata": {},
+   "source": [
+    "## Trash"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
+   "id": "f986bbf9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # ===== 後續不會用到 =====\n",
+    "# def get_gdfroutepair(df_seq):\n",
+    "#     # 先排序，確保順序正確\n",
+    "#     df_seq = df_seq.sort_values(\n",
+    "#         by=['RouteUID', 'SubRouteUID', 'Direction', 'StopSequence']\n",
+    "#     )\n",
+    "\n",
+    "#     # 建立 To 欄位（往下一站）\n",
+    "#     df_seq['ToStop'] = df_seq.groupby(\n",
+    "#         ['RouteUID', 'SubRouteUID', 'Direction']\n",
+    "#     )['StopUID'].shift(-1)\n",
+    "\n",
+    "#     df_seq['ToSeq'] = df_seq.groupby(\n",
+    "#         ['RouteUID', 'SubRouteUID', 'Direction']\n",
+    "#     )['StopSequence'].shift(-1)\n",
+    "\n",
+    "#     df_seq['ToLon'] = df_seq.groupby(\n",
+    "#         ['RouteUID', 'SubRouteUID', 'Direction']\n",
+    "#     )['PositionLon'].shift(-1)\n",
+    "\n",
+    "#     df_seq['ToLat'] = df_seq.groupby(\n",
+    "#         ['RouteUID', 'SubRouteUID', 'Direction']\n",
+    "#     )['PositionLat'].shift(-1)\n",
+    "\n",
+    "#     # 建立 From 欄位（本站）\n",
+    "#     df_seq['FromSeq'] = df_seq['StopSequence']\n",
+    "#     df_seq['FromLon'] = df_seq['PositionLon']\n",
+    "#     df_seq['FromLat'] = df_seq['PositionLat']\n",
+    "#     df_seq['FromStop'] = df_seq['StopUID']\n",
+    "\n",
+    "#     # 只保留需要的欄位\n",
+    "#     df_result = df_seq.reindex(columns = [\n",
+    "#         'RouteUID', 'SubRouteUID', 'Direction',\n",
+    "#         'FromStop', 'FromSeq', 'FromLon', 'FromLat',\n",
+    "#         'ToStop', 'ToSeq', 'ToLon', 'ToLat'])\n",
+    "\n",
+    "#     # 移除最後一站（沒有 To）\n",
+    "#     df_result = df_result.dropna(subset=['ToSeq'])\n",
+    "\n",
+    "#     df_result = df_result.reset_index(drop=True)\n",
+    "\n",
+    "#     gdf_result = get_line(df_result, x1 = 'FromLon', x2 = 'ToLon', y1 = 'FromLat', y2 = 'ToLat')\n",
+    "\n",
+    "#     return gdf_result\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83359af3",
+   "metadata": {},
+   "source": [
+    "## Used"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a736ebd6",
    "metadata": {},
    "outputs": [],
@@ -70,60 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "f986bbf9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ===== 後續不會用到 =====\n",
-    "def get_gdfroutepair(df_seq):\n",
-    "    # 先排序，確保順序正確\n",
-    "    df_seq = df_seq.sort_values(\n",
-    "        by=['RouteUID', 'SubRouteUID', 'Direction', 'StopSequence']\n",
-    "    )\n",
-    "\n",
-    "    # 建立 To 欄位（往下一站）\n",
-    "    df_seq['ToStop'] = df_seq.groupby(\n",
-    "        ['RouteUID', 'SubRouteUID', 'Direction']\n",
-    "    )['StopUID'].shift(-1)\n",
-    "\n",
-    "    df_seq['ToSeq'] = df_seq.groupby(\n",
-    "        ['RouteUID', 'SubRouteUID', 'Direction']\n",
-    "    )['StopSequence'].shift(-1)\n",
-    "\n",
-    "    df_seq['ToLon'] = df_seq.groupby(\n",
-    "        ['RouteUID', 'SubRouteUID', 'Direction']\n",
-    "    )['PositionLon'].shift(-1)\n",
-    "\n",
-    "    df_seq['ToLat'] = df_seq.groupby(\n",
-    "        ['RouteUID', 'SubRouteUID', 'Direction']\n",
-    "    )['PositionLat'].shift(-1)\n",
-    "\n",
-    "    # 建立 From 欄位（本站）\n",
-    "    df_seq['FromSeq'] = df_seq['StopSequence']\n",
-    "    df_seq['FromLon'] = df_seq['PositionLon']\n",
-    "    df_seq['FromLat'] = df_seq['PositionLat']\n",
-    "    df_seq['FromStop'] = df_seq['StopUID']\n",
-    "\n",
-    "    # 只保留需要的欄位\n",
-    "    df_result = df_seq.reindex(columns = [\n",
-    "        'RouteUID', 'SubRouteUID', 'Direction',\n",
-    "        'FromStop', 'FromSeq', 'FromLon', 'FromLat',\n",
-    "        'ToStop', 'ToSeq', 'ToLon', 'ToLat'])\n",
-    "\n",
-    "    # 移除最後一站（沒有 To）\n",
-    "    df_result = df_result.dropna(subset=['ToSeq'])\n",
-    "\n",
-    "    df_result = df_result.reset_index(drop=True)\n",
-    "\n",
-    "    gdf_result = get_line(df_result, x1 = 'FromLon', x2 = 'ToLon', y1 = 'FromLat', y2 = 'ToLat')\n",
-    "\n",
-    "    return gdf_result\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "024b8146",
    "metadata": {},
    "outputs": [],
@@ -194,26 +219,33 @@
     "        crs=\"EPSG:4326\"\n",
     "    ) \n",
     "\n",
-    "    return gdf_route\n",
-    "\n",
-    "def outputlog(logfile: str):\n",
-    "    df_log = transfer_log_to_dataframe(logfile)\n",
-    "\n",
-    "    p = Path(logfile)\n",
-    "    logfile_excel = str(p.with_suffix(\".xlsx\"))\n",
-    "\n",
-    "    df_log.to_excel(logfile_excel, index=False)\n",
-    "    return logfile_excel\n"
+    "    return gdf_route\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5cb6eb4",
+   "metadata": {},
+   "source": [
+    "# Setup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "e05ba16d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 00_Setup 所有全域函數\n",
+    "# 0.) Log輸出檔案位置\n",
+    "logfile = os.path.abspath(os.path.join(os.getcwd(), '..', 'Log', '04_SelectSegment.log'))\n",
+    "logging.basicConfig(\n",
+    "    filename=logfile,\n",
+    "    level=logging.INFO,\n",
+    "    format=\"%(asctime)s | %(levelname)s | %(message)s\"\n",
+    ")\n",
+    "\n",
     "# 1.) 參數\n",
     "SL_buffer_meters = 500\n",
     "SP_buffer_meters = 50\n",
@@ -227,13 +259,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 65,
-   "id": "3f132c3f",
+   "cell_type": "markdown",
+   "id": "ac9680a5",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "logfile = os.path.abspath(os.path.join(os.getcwd(), '..', 'Log', '04_SelectSegment.log'))"
+    "# Main"
    ]
   },
   {
@@ -244,49 +274,44 @@
    "outputs": [],
    "source": [
     "# 1. 讀取資料\n",
-    "updatelog_format(file=logfile, text='Job started')\n",
-    "updatelog_format(file=logfile, text='Reading Data')\n",
+    "logging.info('Job started')\n",
+    "logging.info('Start reading Data')\n",
     "# 讀取模型編修組提供的屏柵線 & 調查點位\n",
     "gdf_sl, gdf_sp = get_screenline_and_surveypoint(SLfolder=SLfolder)\n",
-    "updatelog_format(file=logfile, text=f'讀取屏柵線檔案 該線形crs為 {gdf_sl.crs.name}')\n",
-    "updatelog_format(file=logfile, text=f'讀取調查點檔案 該點位crs為 {gdf_sp.crs.name}')\n",
+    "logging.info(f'讀取屏柵線檔案 該線形crs為 {gdf_sl.crs.name}')\n",
+    "logging.info(f'讀取調查點檔案 該點位crs為 {gdf_sp.crs.name}')\n",
     "\n",
     "# 轉為TWD97 (EPSG:3826) 才能使用buffer功能\n",
     "gdf_sp_unique = get_gdf_sp_unique(gdf_sp).to_crs(epsg=3826) # 因為提供的點位有分路段，所以先改為同一個地點\n",
-    "updatelog_format(file=logfile, text=f'讀取調查點檔案 該點位crs為 {gdf_sp_unique.crs.name}')\n",
+    "logging.info(f'讀取調查點檔案 該點位crs為 {gdf_sp_unique.crs.name}')\n",
+    "\n",
     "gdf_sl_twd97 = gdf_sl.to_crs(epsg=3826).reindex(columns = ['TRTS5', 'Category', 'Number', 'geometry']) # 轉換為TWD97處理\n",
-    "updatelog_format(file=logfile, text=f'讀取屏柵線檔案 該線形crs為 {gdf_sl_twd97.crs.name}')\n",
+    "logging.info(f'讀取屏柵線檔案 該線形crs為 {gdf_sl_twd97.crs.name}')\n",
+    "\n",
     "# 讀取公車站序\n",
     "df_seq = get_df_seq(seqfolder=seqfolder)\n",
     "gdf_seq = dataframe_to_point(df = df_seq, lon_col='PositionLon', lat_col= 'PositionLat', crs=\"EPSG:4326\", target_crs=\"EPSG:3826\")\n",
-    "updatelog_format(file=logfile, text=f'讀取公車站序geodataframe 該點位crs為 {gdf_seq.crs.name}')\n",
+    "logging.info(f'讀取公車站序geodataframe 該點位crs為 {gdf_seq.crs.name}')\n",
     "\n",
     "# 讀取公車原始線型\n",
     "gdf_route  = get_gdf_route(routefolder)\n",
     "gdf_route = gdf_route.to_crs(epsg=3826)\n",
-    "updatelog_format(file=logfile, text=f'讀取公車原始線形 該點位crs為 {gdf_route.crs.name}')\n",
+    "logging.info(f'讀取公車原始線形 該點位crs為 {gdf_route.crs.name}')\n",
     "\n",
     "# 讀取公車片段\n",
     "gdf_route_segment = gpd.read_file(os.path.join(routesegmentfolder, 'gdf_segment_routes.shp'))\n",
-    "updatelog_format(file=logfile, text=f'讀取公車原始線形片段 該點位crs為 {gdf_route_segment.crs.name}')\n",
-    "gdf_route_segment.columns = ['RouteUID', 'SRouteUID', 'Direction', 'StartSeq', 'EndSeq', 'OriStart', 'OriEnd', 'geometry']\n",
+    "logging.info(f'讀取公車路線拆分片段 該點位crs為 {gdf_route_segment.crs.name}')\n",
+    "# gdf_route_segment.columns = ['RouteUID', 'SRouteUID', 'Direction', 'StartSeq', 'EndSeq', 'OriStart', 'OriEnd', 'geometry']\n",
     "gdf_route_segment = gdf_route_segment.to_crs(epsg=3826)\n",
+    "logging.info(f'讀取公車路線拆分片段 該點位crs為 {gdf_route_segment.crs.name}')\n",
     "gdf_route_segment[\"len_seg\"] = gdf_route_segment.geometry.length\n",
-    "\n",
-    "\n",
-    "\n",
+    "logging.info(f'新增公車路線的路線總長')\n",
     "\n",
     "\n",
     "# 2. Buffer初步確認那些會經過調查點位\n",
-    "gdf_routepair = get_gdfroutepair(df_seq) # 取得公車路線pair直線\n",
     "gdf_sl_buffer = buffer_distance(gdf=gdf_sl_twd97, buffermeters=SL_buffer_meters).reset_index(drop = True) # 屏柵線取buffer\n",
     "gdf_sp_buffer = buffer_distance(gdf=gdf_sp_unique, buffermeters=SP_buffer_meters).reset_index(drop = True) # 調查點位取buffer\n",
     "\n",
-    "route_in_buffer = gpd.sjoin(gdf_routepair,\n",
-    "                            gdf_sp_buffer[['Category', 'TRTS5', 'SP_No', 'Name', 'PositionLon', 'PositionLat','Surveyname', 'geometry']],\n",
-    "                            how='inner',\n",
-    "                            predicate='intersects'\n",
-    "                            ).drop(columns='index_right')\n",
     "\n",
     "# route_in_buffer = gpd.sjoin(gdf_routepair,\n",
     "#                             gdf_sl_buffer[['TRTS5','Category','Number','geometry']],\n",
@@ -295,27 +320,17 @@
     "#                             ).drop(columns='index_right')\n",
     "\n",
     "\n",
+    "# outputlog(logfile=logfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac2fbc4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "outputlog(logfile=logfile)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aa138165",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "logging.info(\"Finish cleaning data\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2705067d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "logging"
    ]
   },
   {
