error : clip 失敗

--- a/04_SelectSegment.ipynb
+++ b/04_SelectSegment.ipynb
@@ -183,12 +183,17 @@
     "\n",
     "def get_gdf_sp_unique(gdf_sp):\n",
     "    '''因為調查點位同一個名稱的有太多資料調查來源：先取平均'''\n",
-    "\n",
     "    df_sp_unique = gdf_sp.sort_values(['Category','TRTS5', 'SP_No']).groupby(['Category','TRTS5', 'SP_No']).agg({'Name':'first','PositionLon':'mean', 'PositionLat':'mean', 'Surveyname':'first'}).reset_index()\n",
     "    gdf_sp_unique = dataframe_to_point(df = df_sp_unique, lon_col = 'PositionLon', lat_col = 'PositionLat', crs=\"EPSG:4326\", target_crs=\"EPSG:3826\")\n",
-    "    \n",
-    "\n",
     "    return gdf_sp_unique\n",
+    "\n",
+    "def get_gdf_sp_manual(excelpath,\n",
+    "                      sheet_name=\"調查點位\"):\n",
+    "    df = pd.read_excel(excelpath , sheet_name=\"調查點位\")\n",
+    "    df.drop(columns = 'geometry', inplace = True)\n",
+    "    gdf = dataframe_to_point(df, 'PositionLon', 'PositionLat', crs=\"EPSG:4326\", target_crs=\"EPSG:3826\")\n",
+    "\n",
+    "    return gdf\n",
     "\n",
     "def get_df_seq(seqfolder):\n",
     "    '''讀取公車站序並轉為geodataframe\n",
@@ -282,7 +287,8 @@
     "logging.info(f'讀取調查點檔案 該點位crs為 {gdf_sp.crs.name}')\n",
     "\n",
     "# 轉為TWD97 (EPSG:3826) 才能使用buffer功能\n",
-    "gdf_sp_unique = get_gdf_sp_unique(gdf_sp).to_crs(epsg=3826) # 因為提供的點位有分路段，所以先改為同一個地點\n",
+    "# gdf_sp_unique = get_gdf_sp_unique(gdf_sp).to_crs(epsg=3826) # 因為提供的點位有分路段，所以先改為同一個地點\n",
+    "gdf_sp_unique = get_gdf_sp_manual(excelpath = os.path.join(referencefolder, '屏柵線.xlsx'),  sheet_name=\"get_gdf_sp_manual\") # 這邊已經進行人工挑選點位，並決定後續挑選方向的方式\n",
     "logging.info(f'讀取調查點檔案 該點位crs為 {gdf_sp_unique.crs.name}')\n",
     "\n",
     "gdf_sl_twd97 = gdf_sl.to_crs(epsg=3826).reindex(columns = ['TRTS5', 'Category', 'Number', 'geometry']) # 轉換為TWD97處理\n",
@@ -301,26 +307,31 @@
     "# 讀取公車片段\n",
     "gdf_route_segment = gpd.read_file(os.path.join(routesegmentfolder, 'gdf_segment_routes.shp'))\n",
     "logging.info(f'讀取公車路線拆分片段 該點位crs為 {gdf_route_segment.crs.name}')\n",
-    "# gdf_route_segment.columns = ['RouteUID', 'SRouteUID', 'Direction', 'StartSeq', 'EndSeq', 'OriStart', 'OriEnd', 'geometry']\n",
-    "gdf_route_segment = gdf_route_segment.to_crs(epsg=3826)\n",
-    "logging.info(f'讀取公車路線拆分片段 該點位crs為 {gdf_route_segment.crs.name}')\n",
-    "gdf_route_segment[\"len_seg\"] = gdf_route_segment.geometry.length\n",
-    "logging.info(f'新增公車路線的路線總長')\n",
     "\n",
     "\n",
     "# 2. Buffer初步確認那些會經過調查點位\n",
-    "gdf_sl_buffer = buffer_distance(gdf=gdf_sl_twd97, buffermeters=SL_buffer_meters).reset_index(drop = True) # 屏柵線取buffer\n",
+    "# gdf_sl_buffer = buffer_distance(gdf=gdf_sl_twd97, buffermeters=SL_buffer_meters).reset_index(drop = True) # 屏柵線取buffer\n",
     "gdf_sp_buffer = buffer_distance(gdf=gdf_sp_unique, buffermeters=SP_buffer_meters).reset_index(drop = True) # 調查點位取buffer\n",
+    "logging.info(f'調查點位進行環域，還域範圍為 {SP_buffer_meters}')\n",
     "\n",
-    "\n",
-    "# route_in_buffer = gpd.sjoin(gdf_routepair,\n",
-    "#                             gdf_sl_buffer[['TRTS5','Category','Number','geometry']],\n",
-    "#                             how='inner',\n",
-    "#                             predicate='intersects'\n",
-    "#                             ).drop(columns='index_right')\n",
+    "route_in_buffer = gpd.sjoin(gdf_route_segment,\n",
+    "                            gdf_sp_buffer,\n",
+    "                            how='inner',\n",
+    "                            predicate='intersects'\n",
+    "                            ).drop(columns='index_right')\n",
     "\n",
     "\n",
     "# outputlog(logfile=logfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5eb2517",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "route_in_buffer"
    ]
   },
   {
