--- a/04_SelectSegment.ipynb
+++ b/04_SelectSegment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f2f54fc2",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f986bbf9",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a736ebd6",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "024b8146",
    "metadata": {},
    "outputs": [],
@@ -237,10 +237,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e05ba16d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "PermissionError",
+     "evalue": "[WinError 32] 程序無法存取檔案，因為檔案正由另一個程序使用。: 'd:\\\\B-Project\\\\2025\\\\6800\\\\Technical\\\\12票證資料\\\\TicketAnalysis\\\\Log\\\\04_SelectSegment.log'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mPermissionError\u001b[39m                           Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 10\u001b[39m\n\u001b[32m      4\u001b[39m logging.basicConfig(\n\u001b[32m      5\u001b[39m     filename=logfile,\n\u001b[32m      6\u001b[39m     level=logging.INFO,\n\u001b[32m      7\u001b[39m     \u001b[38;5;28mformat\u001b[39m=\u001b[33m\"\u001b[39m\u001b[38;5;132;01m%(asctime)s\u001b[39;00m\u001b[33m | \u001b[39m\u001b[38;5;132;01m%(levelname)s\u001b[39;00m\u001b[33m | \u001b[39m\u001b[38;5;132;01m%(message)s\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m      8\u001b[39m )\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m os.path.exists(logfile):\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m     \u001b[43mos\u001b[49m\u001b[43m.\u001b[49m\u001b[43mremove\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlogfile\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     12\u001b[39m \u001b[38;5;66;03m# 1.) 參數\u001b[39;00m\n\u001b[32m     13\u001b[39m SL_buffer_meters = \u001b[32m500\u001b[39m\n",
+      "\u001b[31mPermissionError\u001b[39m: [WinError 32] 程序無法存取檔案，因為檔案正由另一個程序使用。: 'd:\\\\B-Project\\\\2025\\\\6800\\\\Technical\\\\12票證資料\\\\TicketAnalysis\\\\Log\\\\04_SelectSegment.log'"
+     ]
+    }
+   ],
    "source": [
     "# 00_Setup 所有全域函數\n",
     "# 0.) Log輸出檔案位置\n",
@@ -250,6 +262,8 @@
     "    level=logging.INFO,\n",
     "    format=\"%(asctime)s | %(levelname)s | %(message)s\"\n",
     ")\n",
+    "if os.path.exists(logfile):\n",
+    "    os.remove(logfile)\n",
     "\n",
     "# 1.) 參數\n",
     "SL_buffer_meters = 500\n",
@@ -314,14 +328,19 @@
     "gdf_sp_buffer = buffer_distance(gdf=gdf_sp_unique, buffermeters=SP_buffer_meters).reset_index(drop = True) # 調查點位取buffer\n",
     "logging.info(f'調查點位進行環域，還域範圍為 {SP_buffer_meters}')\n",
     "\n",
-    "route_in_buffer = gpd.sjoin(gdf_route_segment,\n",
-    "                            gdf_sp_buffer,\n",
-    "                            how='inner',\n",
-    "                            predicate='intersects'\n",
-    "                            ).drop(columns='index_right')\n",
+    "logging.info('以調查點位環域與公車路線片段進行空間交集')\n",
+    "# route_in_buffer = gpd.clip(gdf_route_segment,gdf_sp_buffer\n",
+    "#                           ).reset_index(drop = True)\n",
     "\n",
+    "# route_in_buffer = gpd.sjoin(gdf_route_segment,\n",
+    "#                             gdf_sp_buffer,\n",
+    "#                             how='inner',\n",
+    "#                             predicate='intersects'\n",
+    "#                             ).drop(columns='index_right')\n",
+    "# logging.info('原本輸入的公車片段共有 %d 筆資料' % len(gdf_route_segment))\n",
+    "# logging.info('實際取得交集的公車片段共有 %d 筆資料' % len(route_in_buffer))\n",
     "\n",
-    "# outputlog(logfile=logfile)"
+    "\n"
    ]
   },
   {
@@ -341,7 +360,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outputlog(logfile=logfile)"
+    "get_df_log(logfile=logfile)"
    ]
   },
   {
