fix:change file name

--- a/04_BusTicketAnalysis.ipynb
+++ b/04_BusTicketAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "51662c73",
    "metadata": {},
    "outputs": [],
@@ -11,8 +11,10 @@
     "import numpy as np\n",
     "import os \n",
     "import datetime\n",
+    "import logging\n",
     "import geopandas as gpd\n",
-    "from collections import Counter   # 用來方便累加每個 chunk 的統計結果"
+    "from collections import Counter   # 用來方便累加每個 chunk 的統計結果\n",
+    "from basicprocess import create_folder, findfiles, read_combined_dataframe, get_df_log, outputlog"
    ]
   },
   {
@@ -20,7 +22,15 @@
    "id": "45e2aaea",
    "metadata": {},
    "source": [
-    "# finish"
+    "# Finished"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77844dad",
+   "metadata": {},
+   "source": [
+    "## Function"
    ]
   },
   {
@@ -30,67 +40,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 00_setup_os處理函數\n",
-    "def create_folder(folder_name):\n",
-    "    \"\"\"建立資料夾\"\"\"\n",
-    "    if not os.path.exists(folder_name):\n",
-    "        os.makedirs(folder_name)\n",
-    "    return os.path.abspath(folder_name)\n",
-    "\n",
-    "def findfiles(filefolderpath, filetype='.csv', recursive=True):\n",
-    "    \"\"\"\n",
-    "    尋找指定路徑下指定類型的檔案，並返回檔案路徑列表。\n",
-    "\n",
-    "    Args:\n",
-    "        filefolderpath (str): 指定的檔案路徑。\n",
-    "        filetype (str, optional): 要尋找的檔案類型，預設為 '.csv'。\n",
-    "        recursive (bool, optional): 是否檢索所有子資料夾，預設為 True；反之為False，僅查找當前資料夾的所有file。\n",
-    "\n",
-    "    Returns:\n",
-    "        list: 包含所有符合條件的檔案路徑的列表。\n",
-    "    \"\"\"\n",
-    "    filelist = []\n",
-    "\n",
-    "    if recursive:\n",
-    "        # 遍歷資料夾及其子資料夾\n",
-    "        for root, _, files in os.walk(filefolderpath):\n",
-    "            for file in files:\n",
-    "                if file.endswith(filetype):\n",
-    "                    file_path = os.path.join(root, file)\n",
-    "                    filelist.append(file_path)\n",
-    "    else:\n",
-    "        # 僅檢索當前資料夾\n",
-    "        for file in os.listdir(filefolderpath):\n",
-    "            file_path = os.path.join(filefolderpath, file)\n",
-    "            if os.path.isfile(file_path) and file.endswith(filetype):\n",
-    "                filelist.append(file_path)\n",
-    "\n",
-    "    return filelist\n",
-    "\n",
-    "def read_combined_dataframe(file_list, filepath = True):\n",
-    "    dataframes = []\n",
-    "    \n",
-    "    for file in file_list:\n",
-    "        try:\n",
-    "            if file.endswith('.csv'):\n",
-    "                df = pd.read_csv(file)\n",
-    "            elif file.endswith('.shp'):\n",
-    "                df = gpd.read_file(file)\n",
-    "            elif file.endswith(('.xls', '.xlsx')):\n",
-    "                df = pd.read_excel(file)\n",
-    "            else:\n",
-    "                print(f\"Unsupported file format: {file}\")\n",
-    "                continue\n",
-    "            if filepath:\n",
-    "                df['FilePath'] = file  # 添加來源檔案路徑欄位\n",
-    "            dataframes.append(df)\n",
-    "        except Exception as e:\n",
-    "            print(f\"Error reading {file}: {e}\")\n",
-    "\n",
-    "    # 合併所有 DataFrame\n",
-    "    combined_df = pd.concat(dataframes, ignore_index=True)\n",
-    "    return combined_df\n",
-    "\n",
     "# 01_資料預處理\n",
     "def filter_ticket_data(filepath, \n",
     "                       selectdate_start, \n",
@@ -1067,19 +1016,36 @@
     "    # 輸出\n",
     "    betweenstops_outputfile = os.path.join(dailybetweenstops_folder, '全日站間量.csv')\n",
     "    betweenstops.to_csv(betweenstops_outputfile, index=False, encoding='utf-8-sig')\n",
-    "    # return betweenstops \n",
+    "    return betweenstops \n",
     "\n",
     "# 分析03: 起訖量\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1f2be8c6",
+   "metadata": {},
+   "source": [
+    "## Setup"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c1428724",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 00_Setup 所有全域函數\n",
+    "logfile = os.path.abspath(os.path.join(os.getcwd(), '..', 'Log', '04_票證分析.log'))\n",
+    "if os.path.exists(logfile):\n",
+    "    os.remove(logfile)\n",
+    "    \n",
+    "logging.basicConfig(\n",
+    "    filename=logfile,\n",
+    "    level=logging.INFO,\n",
+    "    format=\"%(asctime)s | %(levelname)s | %(message)s\"\n",
+    ")\n",
     "\n",
     "# 1.) 設定篩選日期區間\n",
     "selectdate_start = '2024-10-01'\n",
@@ -1102,8 +1068,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "888a305c",
+   "metadata": {},
+   "source": [
+    "## Run"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4b02f38d",
    "metadata": {},
    "outputs": [],
@@ -1155,7 +1129,8 @@
     "\n",
     "\n",
     "#     # 分析02: 計算全日站間量\n",
-    "#     analytics02_onbus_count(hourlycount_folder, dailybetweenstops_folder)"
+    "#     betweenstops = analytics02_onbus_count(hourlycount_folder, dailybetweenstops_folder)\n",
+    "\n"
    ]
   }
  ],
